<?xml version="1.0"?>
<package format="2">
  <name>aloam_slam</name>
  <version>0.0.0</version>

  <description>
    This is an advanced implentation of LOAM.
    LOAM is described in the following paper:
    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
      Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.
  </description>

  <maintainer email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</maintainer>

  <license>BSD</license>

  <author email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>image_transport</depend>
  <depend>pairs_lib</depend>
  <depend>pairs_msgs</depend>
  <depend>pairs_modules_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>tf_conversions</depend>
  <depend>tf2_eigen</depend>
  <depend>nodelet</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>ouster_ros</depend>
  <depend>libceres-dev</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
